--- a/src/main/resources/templates/addCar.html
+++ b/src/main/resources/templates/addCar.html
@@ -5,11 +5,7 @@
     <title>Dodaj Samochód - AutoRent</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-          integrity="sha512-pO3XVVk74xgK1u1kVj6+1wxNVFQeKj+jI9lI3qYBnOupg5qAeW9P1KQus93cG/4VYcP9klUaJPOmda+7I4n9bQ=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Opcjonalny plik CSS dla dodatkowych stylów -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="/css/custom.css" rel="stylesheet">
 </head>
 <body>
@@ -43,7 +39,7 @@
             <div class="mb-3">
                 <label for="power" class="form-label">Moc (KM)</label>
                 <div class="input-group">
-                    <span class="input-group-text"><i class="fas fa-tachometer-alt"></i></span>
+                    <span class="input-group-text"><i class="fas fa-horse-head"></i></span>
                     <input type="number" class="form-control" id="power" name="power" placeholder="Wprowadź moc w KM" required>
                 </div>
             </div>
@@ -71,7 +67,7 @@
             <div class="mb-3">
                 <label for="transmission" class="form-label">Skrzynia biegów</label>
                 <div class="input-group">
-                    <span class="input-group-text"><i class="fas fa-shift"></i></span>
+                    <span class="input-group-text"><i class="fas fa-gear"></i></span>
                     <select class="form-select" id="transmission" name="transmission" required>
                         <option value="" selected disabled>Wybierz skrzynię biegów</option>
                         <option value="manualna">Manualna</option>
