--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,12 +5,8 @@
   <title>Logowanie - AutoRent</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Opcjonalny plik CSS dla dodatkowych stylów -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="/css/custom.css" rel="stylesheet">
-  <style>
-    /* Custom styles for the login page */
-
-  </style>
 </head>
 <body>
 <div th:replace="~{fragments/header :: header}"></div>
