--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,21 +5,8 @@
   <title>Rejestracja - AutoRent</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome CSS (opcjonalnie, jeśli chcesz używać ikon) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-pO3XVVk74xgK1u1kVj6+1wxNVFQeKj+jI9lI3qYBnOupg5qAeW9P1KQus93cG/4VYcP9klUaJPOmda+7I4n9bQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Opcjonalny plik CSS dla dodatkowych stylów -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="/css/custom.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #f8f9fa; /* Jasne tło */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh; /* Pełna wysokość widoku */
-    }
-  </style>
 </head>
 <body>
 <div th:replace="~{fragments/header :: header}"></div>
