--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="pl">
 <head>
   <title>AutoRent - Strona Główna</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -109,7 +109,7 @@
             <li><i class="fas fa-horse-head"></i> <strong>Moc:</strong> <span th:text="${car.power()}"></span> KM</li>
             <li><i class="fas fa-cogs"></i> <strong>Pojemność silnika:</strong> <span th:text="${car.engineCapacity()}"></span> l</li>
             <li><i class="fas fa-gas-pump"></i> <strong>Rodzaj paliwa:</strong> <span th:text="${car.fuelType()}"></span></li>
-            <li><i class="fas fa-gear"></i> <strong>Skrzynia biegów:</strong> <span th:text="${car.transmission()}"></span></li><!-- TODO dodać ikonkę skrzyni biegów -->
+            <li><i class="fas fa-gear"></i> <strong>Skrzynia biegów:</strong> <span th:text="${car.transmission()}"></span></li>
             <li><i class="fas fa-users"></i> <strong>Liczba miejsc:</strong> <span th:text="${car.seats()}"></span></li>
           </ul>
         </div>
