--- a/src/main/resources/templates/rentals.html
+++ b/src/main/resources/templates/rentals.html
@@ -94,29 +94,37 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Zamknij"></button>
       </div>
       <div class="modal-body">
-        <h4>Samochód</h4>
-        <p><strong>Marka:</strong> <span id="modalCarBrand"></span></p>
-        <p><strong>Model:</strong> <span id="modalCarModel"></span></p>
-        <p><strong>Rocznik:</strong> <span id="modalCarYear"></span></p>
-        <p><strong>Moc:</strong> <span id="modalCarPower"></span></p>
-        <p><strong>Pojemność silnika:</strong> <span id="modalCarEngineCapacity"></span></p>
-        <p><strong>Rodzaj paliwa:</strong> <span id="modalCarFuelType"></span></p>
-        <p><strong>Skrzynia biegów:</strong> <span id="modalCarTransmission"></span></p>
-        <p><strong>Liczba miejsc:</strong> <span id="modalCarSeats"></span></p>
-        <p><strong>Cena za dzień:</strong> <span id="modalCarPricePerDay"></span> zł</p>
-
-        <h4>Użytkownik</h4>
-        <p><strong>Login:</strong> <span id="modalUserLogin"></span></p>
-        <p><strong>Imię:</strong> <span id="modalUserName"></span></p>
-        <p><strong>Nazwisko:</strong> <span id="modalUserSurname"></span></p>
-        <p><strong>Email:</strong> <span id="modalUserEmail"></span></p>
-        <p><strong>Numer telefonu:</strong> <span id="modalUserPhone"></span></p>
-
-        <h4>Szczegóły Wypożyczenia</h4>
-        <p><strong>Data wypożyczenia:</strong> <span id="modalRentalDate"></span></p>
-        <p><strong>Data zwrotu:</strong> <span id="modalReturnDate"></span></p>
-        <p><strong>Liczba dni:</strong> <span id="modalDaysBetween"></span></p>
-        <p><strong>Cena całkowita:</strong> <span id="modalTotalPrice"></span> zł</p>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-4">
+              <h4>Samochód</h4>
+              <p><strong>Marka:</strong> <span id="modalCarBrand"></span></p>
+              <p><strong>Model:</strong> <span id="modalCarModel"></span></p>
+              <p><strong>Rocznik:</strong> <span id="modalCarYear"></span></p>
+              <p><strong>Moc:</strong> <span id="modalCarPower"></span> KM</p>
+              <p><strong>Pojemność silnika:</strong> <span id="modalCarEngineCapacity"></span> L</p>
+              <p><strong>Rodzaj paliwa:</strong> <span id="modalCarFuelType"></span></p>
+              <p><strong>Skrzynia biegów:</strong> <span id="modalCarTransmission"></span></p>
+              <p><strong>Liczba miejsc:</strong> <span id="modalCarSeats"></span></p>
+              <p><strong>Cena za dzień:</strong> <span id="modalCarPricePerDay"></span> PLN</p>
+            </div>
+            <div class="col-md-4">
+              <h4>Użytkownik</h4>
+              <p><strong>Login:</strong> <span id="modalUserLogin"></span></p>
+              <p><strong>Imię:</strong> <span id="modalUserName"></span></p>
+              <p><strong>Nazwisko:</strong> <span id="modalUserSurname"></span></p>
+              <p><strong>Email:</strong> <span id="modalUserEmail"></span></p>
+              <p><strong>Numer telefonu:</strong> <span id="modalUserPhone"></span></p>
+            </div>
+            <div class="col-md-4">
+              <h4>Szczegóły Wypożyczenia</h4>
+              <p><strong>Data wypożyczenia:</strong> <span id="modalRentalDate"></span></p>
+              <p><strong>Data zwrotu:</strong> <span id="modalReturnDate"></span></p>
+              <p><strong>Liczba dni:</strong> <span id="modalDaysBetween"></span></p>
+              <p><strong>Cena całkowita:</strong> <span id="modalTotalPrice"></span> PLN</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
